[package]
authors = ["agoetz"]
edition = "2018"
readme = "README.md"
name = "sandbox"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
cortex-m-rtfm = "0.5.1"
[dependencies.stm32l0xx-hal]
version = "0.6.0"
features = ["stm32l0x3", "rt", "stm32-usbd"]

# this lets you use `cargo fix`!
[[bin]]
name = "sandbox"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
