[workspace]
members = [
        "app",
        "buslogger",
        "base",
        ]

[patch.crates-io]
mfxstm32l152 = { path = '../mfxstm32l152' }
stm32l0xx-hal = { git = "https://github.com/apgoetz/stm32l0xx-hal.git", branch = "i2c-improvements" }



[profile.release]
#codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations
[profile.dev]
opt-level=2
