[package]
authors = ["agoetz"]
edition = "2018"
readme = "README.md"
name = "sandbox"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
cortex-m-rtfm = "0.5.1"
stm32l0 = "0.10.0"
app = { path = "../app"}
mfxstm32l152 = "0.0.1"
embedded-hal = "0.2.3"

[dependencies.stm32l0xx-hal]
version = "0.6.1"
features = ["stm32l0x3", "rt", "stm32-usbd", "mcu-STM32L053C8Tx"]


